# FlowCurator_Bot_tg_gpt4.1

./: .gitignore  FC_bot_gtp4.1.py  FlowCurator_Hydroponic_telegram.bat  Flow_Curator_bot.exe.lnk  fc_DEBUG.txt  fc_ERROR.txt  fc_INFO.txt  fc_database.sqlite  fc_logs.txt  fc_session.session  fc_session.session-journal  main.py  pyproject.toml  readme.MD
